...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="INFO" footerTitle="" id="ecL-ln-FN8" userLabel="The Creators">
                                <cells>
                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="LN9-uJ-vQu" userLabel="FAQ" customClass="TableViewCell" customModule="GigRadio" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="701" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LN9-uJ-vQu" id="qJv-By-7tM">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="5qa-gz-zC7" id="5pd-KI-AUe"/>
                            <outlet property="delegate" destination="5qa-gz-zC7" id="ZuN-sX-QqT"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Info and Preferences" id="wiG-9v-R6w">
                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="dJA-Z0-W7P">
                            <connections>
                                <action selector="didPressDone:" destination="5qa-gz-zC7" id="aiI-qb-d5I"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="6FC-7d-niu" id="wRA-QX-Jbp"/>
                            <outlet property="delegate" destination="6FC-7d-niu" id="JLI-rT-yUr"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Saved gigs" id="kPN-JM-m9u"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="8PR-T6-R3A" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1973" y="8"/>
        </scene>
...
