/* 
  GigRadio.strings
  GigRadio

  Created by Michael Forrest on 17/05/2015.
  Copyright (c) 2015 Good To Hear. All rights reserved.
*/
"LocationPrompt.Title" = "Access location?";
"LocationPrompt.Message" = "Gig Radio works best if you allow it to access your location. Continue?";
"LocationPrompt.Deny" = "No thanks";
"LocationPrompt.Continue" = "Yes please";
"TimeVenueAndDistance.Title" = "%@ at %@";
"TimeVenueAndDistance.Distance" = ", %@ away";
"Favourites.Upcoming" = "Coming up...";
"Favourites.Past" = "Past gigs";
"SoundCloudUser.Explanation" = "We searched SoundCloud for '%@' and found '%@'. This user has %i unstreamable track(s). If we got it wrong, you can fix that here.";
"Directions.SettingsTitle" = "Set Your Preferred Mapping App";
"Directions.ButtonTitle" = "Show directions in %@";
"SoundCloudUsers.CountOthersAvailable" = "%i more available";
"SoundCloudUsers.SearchTitle" = "Results for '%@'";
"Blacklisting.DoNotPlay" = "Don't play tracks by this artist";
"Blacklisting.DoPlay" = "Do play tracks by this artist";
"onboarding-1" = "You could browse nearby gigs on SongKick. You'd find plenty of artists you don't know.";
"onboarding-2" = "So you could search for these artists on SoundCloud to see if you like them.";
"onboarding-3" = "Gig Radio does this for you, so all you have to do is listen to music.";
"onboarding-4" = "We search by band name, so if something doesn’t sound right, you can look for the right artist or skip it.";
"onboarding-next" = "Okay";
"onboarding-dismiss" = "Got it!";
"Link.ShowInSongKick" = "Show gig in SongKick";
"EventInfo.ArtistsTitle" = "Line up";
"EventInfo.Title" = "Gig Info";