...
        updateFavouriteButton()
    }
    func updateFavouriteButton(){
        if Favourite.findByEvent(event) != nil{
            favouriteButtonItem.image = UIImage(named: "starred")
        }else{
            favouriteButtonItem.image = UIImage(named: "star")
        }
    }
    @IBAction func didPressFavouriteButton(sender: AnyObject) {
        if let favourite = Favourite.findByEvent(event){
            Favourite.remove(favourite)
        }else{
...
        switch Section(rawValue: indexPath.section)!{
        case .Directions:
            if let link = MapLink.preferredMapLink(event.venue){
                cell.titleLabel.text = template("Directions.ButtonTitle", values: [link.displayName])
            }
            let button = UIButton(type: .Custom)
            let image = UIImage(named: "settings")
            button.frame.size = CGSize(width: 44, height: 44)
            button.setImage(image, forState: .Normal)
            button.addTarget(self, action: "didPressDirectionsSettings:", forControlEvents: .TouchUpInside)
            cell.accessoryView = button
        case .EventLinks:
            cell.titleLabel.text = t("Link.ShowInSongKick")
...
