...
        var links = [MapLink]()
        let app = UIApplication.sharedApplication()
        
        for item:[String] in [
            ["CityMapper", citymapperUri(venue)],
            ["Google Maps", googleMapsUri(venue)],
            ["Apple Maps", appleMapsUri(venue)]
            ]
        {
            if let url = NSURL(string: item.last!){
                if app.canOpenURL(url){
                    links.append(MapLink(displayName: item.first!, appURL: url))
                }
...
